# watersnake

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml  setup.py
patches/: wfa2-lib
src/watersnake/: __init__.py  _aligner.pyx  wfa.pxd
